--- a/PassengerCount/PassengerCount.vcxproj.filters
+++ b/PassengerCount/PassengerCount.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="PassengerCount.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Blob.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Blob.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
